--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="label_city_name">Город:</string>
     <string name="label_date_time">Дата и время:</string>
     <string name="label_temperature">Температура, С:</string>
+    <string name="error_incorrect_city_name">Некорректное или пустое название города. Только русские буквы без пробелов, минимум 3 буквы</string>
+    <string name="error_add_city_in_list_not_success">Не получилось добавить город: %s</string>
+    <string name="success_update_weather_list">Данные успешно обновлены</string>
+    <string name="error_update_weather_list_not_success">Ошибка загрузки данных: %s</string>
 </resources>
